--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,284 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Quarter</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "      <th>Cost of Revenue</th>\n",
-       "      <th>Gross Profit</th>\n",
-       "      <th>Premium Revenue</th>\n",
-       "      <th>Premium Cost Revenue</th>\n",
-       "      <th>Premium Gross Profit</th>\n",
-       "      <th>Ad Revenue</th>\n",
-       "      <th>Ad Cost of revenue</th>\n",
-       "      <th>Ad gross Profit</th>\n",
-       "      <th>MAUs</th>\n",
-       "      <th>Premium MAUs</th>\n",
-       "      <th>Ad MAUs</th>\n",
-       "      <th>Premium ARPU</th>\n",
-       "      <th>Sales and Marketing Cost</th>\n",
-       "      <th>Research and Development Cost</th>\n",
-       "      <th>Genreal and Adminstraive Cost</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>28.0000</td>\n",
-       "      <td>28.00000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.00000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "      <td>28.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2020.0000</td>\n",
-       "      <td>2.50000</td>\n",
-       "      <td>2104.821429</td>\n",
-       "      <td>1563.642857</td>\n",
-       "      <td>541.535714</td>\n",
-       "      <td>1853.142857</td>\n",
-       "      <td>1338.214286</td>\n",
-       "      <td>514.928571</td>\n",
-       "      <td>240.928571</td>\n",
-       "      <td>225.785714</td>\n",
-       "      <td>15.107143</td>\n",
-       "      <td>324.821429</td>\n",
-       "      <td>140.50000</td>\n",
-       "      <td>192.714286</td>\n",
-       "      <td>4.623929</td>\n",
-       "      <td>260.071429</td>\n",
-       "      <td>227.321429</td>\n",
-       "      <td>107.285714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2.0367</td>\n",
-       "      <td>1.13855</td>\n",
-       "      <td>797.101697</td>\n",
-       "      <td>590.917191</td>\n",
-       "      <td>215.495206</td>\n",
-       "      <td>687.238797</td>\n",
-       "      <td>471.537545</td>\n",
-       "      <td>217.192000</td>\n",
-       "      <td>126.240197</td>\n",
-       "      <td>121.842144</td>\n",
-       "      <td>19.071676</td>\n",
-       "      <td>141.742869</td>\n",
-       "      <td>55.81683</td>\n",
-       "      <td>90.101530</td>\n",
-       "      <td>0.364786</td>\n",
-       "      <td>102.164330</td>\n",
-       "      <td>120.137284</td>\n",
-       "      <td>35.910235</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>2017.0000</td>\n",
-       "      <td>1.00000</td>\n",
-       "      <td>902.000000</td>\n",
-       "      <td>775.000000</td>\n",
-       "      <td>105.000000</td>\n",
-       "      <td>828.000000</td>\n",
-       "      <td>686.000000</td>\n",
-       "      <td>118.000000</td>\n",
-       "      <td>74.000000</td>\n",
-       "      <td>87.000000</td>\n",
-       "      <td>-24.000000</td>\n",
-       "      <td>131.000000</td>\n",
-       "      <td>52.00000</td>\n",
-       "      <td>82.000000</td>\n",
-       "      <td>4.120000</td>\n",
-       "      <td>110.000000</td>\n",
-       "      <td>80.000000</td>\n",
-       "      <td>42.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2018.0000</td>\n",
-       "      <td>1.75000</td>\n",
-       "      <td>1483.500000</td>\n",
-       "      <td>1074.500000</td>\n",
-       "      <td>392.500000</td>\n",
-       "      <td>1292.500000</td>\n",
-       "      <td>942.750000</td>\n",
-       "      <td>349.750000</td>\n",
-       "      <td>130.750000</td>\n",
-       "      <td>115.750000</td>\n",
-       "      <td>3.250000</td>\n",
-       "      <td>203.000000</td>\n",
-       "      <td>93.75000</td>\n",
-       "      <td>114.250000</td>\n",
-       "      <td>4.340000</td>\n",
-       "      <td>172.750000</td>\n",
-       "      <td>135.750000</td>\n",
-       "      <td>73.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>2020.0000</td>\n",
-       "      <td>2.50000</td>\n",
-       "      <td>1932.000000</td>\n",
-       "      <td>1448.000000</td>\n",
-       "      <td>518.500000</td>\n",
-       "      <td>1774.000000</td>\n",
-       "      <td>1282.500000</td>\n",
-       "      <td>491.500000</td>\n",
-       "      <td>200.500000</td>\n",
-       "      <td>188.000000</td>\n",
-       "      <td>19.000000</td>\n",
-       "      <td>309.500000</td>\n",
-       "      <td>141.00000</td>\n",
-       "      <td>177.500000</td>\n",
-       "      <td>4.575000</td>\n",
-       "      <td>252.000000</td>\n",
-       "      <td>186.000000</td>\n",
-       "      <td>102.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2022.0000</td>\n",
-       "      <td>3.25000</td>\n",
-       "      <td>2732.750000</td>\n",
-       "      <td>2032.500000</td>\n",
-       "      <td>706.000000</td>\n",
-       "      <td>2410.250000</td>\n",
-       "      <td>1729.000000</td>\n",
-       "      <td>681.250000</td>\n",
-       "      <td>336.750000</td>\n",
-       "      <td>342.250000</td>\n",
-       "      <td>26.500000</td>\n",
-       "      <td>424.750000</td>\n",
-       "      <td>183.50000</td>\n",
-       "      <td>255.250000</td>\n",
-       "      <td>4.762500</td>\n",
-       "      <td>341.750000</td>\n",
-       "      <td>284.250000</td>\n",
-       "      <td>131.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>2023.0000</td>\n",
-       "      <td>4.00000</td>\n",
-       "      <td>3671.000000</td>\n",
-       "      <td>2691.000000</td>\n",
-       "      <td>980.000000</td>\n",
-       "      <td>3170.000000</td>\n",
-       "      <td>2248.000000</td>\n",
-       "      <td>922.000000</td>\n",
-       "      <td>501.000000</td>\n",
-       "      <td>443.000000</td>\n",
-       "      <td>58.000000</td>\n",
-       "      <td>602.000000</td>\n",
-       "      <td>236.00000</td>\n",
-       "      <td>379.000000</td>\n",
-       "      <td>5.530000</td>\n",
-       "      <td>453.000000</td>\n",
-       "      <td>468.000000</td>\n",
-       "      <td>171.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Year   Quarter  Total Revenue  Cost of Revenue  Gross Profit  \\\n",
-       "count    28.0000  28.00000      28.000000        28.000000     28.000000   \n",
-       "mean   2020.0000   2.50000    2104.821429      1563.642857    541.535714   \n",
-       "std       2.0367   1.13855     797.101697       590.917191    215.495206   \n",
-       "min    2017.0000   1.00000     902.000000       775.000000    105.000000   \n",
-       "25%    2018.0000   1.75000    1483.500000      1074.500000    392.500000   \n",
-       "50%    2020.0000   2.50000    1932.000000      1448.000000    518.500000   \n",
-       "75%    2022.0000   3.25000    2732.750000      2032.500000    706.000000   \n",
-       "max    2023.0000   4.00000    3671.000000      2691.000000    980.000000   \n",
-       "\n",
-       "       Premium Revenue  Premium Cost Revenue  Premium Gross Profit  \\\n",
-       "count        28.000000             28.000000             28.000000   \n",
-       "mean       1853.142857           1338.214286            514.928571   \n",
-       "std         687.238797            471.537545            217.192000   \n",
-       "min         828.000000            686.000000            118.000000   \n",
-       "25%        1292.500000            942.750000            349.750000   \n",
-       "50%        1774.000000           1282.500000            491.500000   \n",
-       "75%        2410.250000           1729.000000            681.250000   \n",
-       "max        3170.000000           2248.000000            922.000000   \n",
-       "\n",
-       "       Ad Revenue  Ad Cost of revenue  Ad gross Profit        MAUs  \\\n",
-       "count   28.000000           28.000000        28.000000   28.000000   \n",
-       "mean   240.928571          225.785714        15.107143  324.821429   \n",
-       "std    126.240197          121.842144        19.071676  141.742869   \n",
-       "min     74.000000           87.000000       -24.000000  131.000000   \n",
-       "25%    130.750000          115.750000         3.250000  203.000000   \n",
-       "50%    200.500000          188.000000        19.000000  309.500000   \n",
-       "75%    336.750000          342.250000        26.500000  424.750000   \n",
-       "max    501.000000          443.000000        58.000000  602.000000   \n",
-       "\n",
-       "       Premium MAUs     Ad MAUs  Premium ARPU  Sales and Marketing Cost  \\\n",
-       "count      28.00000   28.000000     28.000000                 28.000000   \n",
-       "mean      140.50000  192.714286      4.623929                260.071429   \n",
-       "std        55.81683   90.101530      0.364786                102.164330   \n",
-       "min        52.00000   82.000000      4.120000                110.000000   \n",
-       "25%        93.75000  114.250000      4.340000                172.750000   \n",
-       "50%       141.00000  177.500000      4.575000                252.000000   \n",
-       "75%       183.50000  255.250000      4.762500                341.750000   \n",
-       "max       236.00000  379.000000      5.530000                453.000000   \n",
-       "\n",
-       "       Research and Development Cost  Genreal and Adminstraive Cost  \n",
-       "count                      28.000000                      28.000000  \n",
-       "mean                      227.321429                     107.285714  \n",
-       "std                       120.137284                      35.910235  \n",
-       "min                        80.000000                      42.000000  \n",
-       "25%                       135.750000                      73.000000  \n",
-       "50%                       186.000000                     102.500000  \n",
-       "75%                       284.250000                     131.000000  \n",
-       "max                       468.000000                     171.000000  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "quarterly = pd.read_csv('./data/spotify-quarterly.csv')\n",
+    "data_path = './data/'\n",
     "\n",
-    "quarterly.describe()"
+    "quarterly_df = pd.read_csv(f'{data_path}spotify-quarterly.csv')\n",
+    "apk_df = pd.read_csv(f'{data_path}apk.csv')"
    ]
   },
   {
