add p value for different correlation metrics

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import pearsonr, spearmanr, kendalltau\n",
     "\n",
     "from itertools import islice, cycle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +128,7 @@
        "['#1f77b4', '#ff7f0e', '#2ca02c']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,20 +258,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6391780053158126\n"
+      "Pearson correlation: -0.6223810216218667\n",
+      "p-value: 0.0006859359176054387\n"
      ]
     }
    ],
    "source": [
-    "pearson_corr_maus = trunc_quarterly_df['Premium MAUs'].corr(trunc_apk_quarterly_df['Downloads'], method='pearson')\n",
-    "print(pearson_corr_maus)"
+    "pearson_corr_maus, pearson_pvalue = pearsonr(trunc_quarterly_df['Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Pearson correlation: {pearson_corr_maus}')\n",
+    "print(f'p-value: {pearson_pvalue}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Spearman correlation: -0.9206837606837606\n",
+      "p-value: 2.7168222882982103e-11\n"
+     ]
+    }
+   ],
+   "source": [
+    "spearman_corr_maus, spearman_pvalue = spearmanr(trunc_quarterly_df['Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Spearman correlation: {spearman_corr_maus}')\n",
+    "print(f'p-value: {spearman_pvalue}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kendall Tau correlation: -0.7846153846153847\n",
+      "p-value: 1.030182378596434e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "kendalltau_corr_maus, kendalltau_pvalue = kendalltau(trunc_quarterly_df['Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Kendall Tau correlation: {kendalltau_corr_maus}')\n",
+    "print(f'p-value: {kendalltau_pvalue}')"
    ]
   },
   {
@@ -282,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -326,20 +369,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.166882072646831\n"
+      "Pearson correlation: -0.09670169273907739\n",
+      "p-value: 0.6383997581432619\n"
      ]
     }
    ],
    "source": [
-    "pearson_corr_marginal_maus = trunc_quarterly_df['Marginal Premium MAUs'].corr(trunc_apk_quarterly_df['Downloads'], method='pearson')\n",
-    "print(pearson_corr_marginal_maus)"
+    "pearson_corr_marginal_maus, pearson_marginal_pvalue = pearsonr(trunc_quarterly_df['Marginal Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Pearson correlation: {pearson_corr_marginal_maus}')\n",
+    "print(f'p-value: {pearson_marginal_pvalue}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson correlation: -0.1228093718374692\n",
+      "p-value: 0.5500538723379269\n"
+     ]
+    }
+   ],
+   "source": [
+    "spearman_corr_marginal_maus, spearman_marginal_pvalue = spearmanr(trunc_quarterly_df['Marginal Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Pearson correlation: {spearman_corr_marginal_maus}')\n",
+    "print(f'p-value: {spearman_marginal_pvalue}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson correlation: -0.08326663997864531\n",
+      "p-value: 0.5635104573765848\n"
+     ]
+    }
+   ],
+   "source": [
+    "kendalltau_corr_marginal_maus, kendalltau_marginal_pvalue = kendalltau(trunc_quarterly_df['Marginal Premium MAUs'], trunc_apk_quarterly_df['Downloads'])\n",
+    "print(f'Pearson correlation: {kendalltau_corr_marginal_maus}')\n",
+    "print(f'p-value: {kendalltau_marginal_pvalue}')"
    ]
   }
  ],
