add final draft

--- a/src/final2.ipynb
+++ b/src/final2.ipynb
@@ -364,6 +364,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Granger causality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La Granger causality è un test statistico che permette di determinare se i valori di una serie possono essere utilizzati per prevedere i valori di un'altra serie.\n",
+    "\n",
+    "La funzione utilizzata di seguito è parte del modulo `statsmodels`, ed effettua il calcolo di F-test e test del $ \\chi^2 $. Presenta inoltre un parametro `maxlag` che indica dopo quante unità di tempo si presume che la prima serie influenzi la seconda. Nel nostro caso, il parametro è impostato a 1, per verificare che gli effetti si verifichino solo nel trimestre successivo a quello di interesse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Risultati sperimentali"
    ]
   },
@@ -919,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Correlazione tra Premium MAUs marginali e download apk\n",
+    "### Correlazione tra MAUs marginali e download apk\n",
     "\n",
     "A differenza dei premium MAUs, il numero di download dell'apk non indica l'utenza attiva mensilmente sull'applicazione ma una serie di incrementi (a meno di download multipli da parte dello stesso utente). È ragionevole quindi andarli a confrontare con gli utenti mensili marginali."
    ]
@@ -1070,7 +1086,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Questo suggerisce che variazioni dei download dell'apk non comportino particolari cambiamenti nell'utenza premium, e che coloro che scaricano l'apk sarebbero potenzialmente utenti ad comunque non paganti."
+    "## 1) Da cosa sono influenzati i guadagni di Spotify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Presenza di utenti, indipendentemente che siano Premium o Ad. Si nota come gli utenti Premium siano quasi sempre circa la metà degli utenti Ad.\n",
+    "* È possibile determinare un nesso di causalità tra guadagni derivanti dagli abbonamenti Premium e guadagni totali.\n",
+    "* Non è stato possibile dimostrare una causalità diretta tra utenti Ad e guadagni derivanti da essi.\n",
+    "* Si nota dal calcolo dei changepoint che c'è stata una variazione intorno alla fine del 2020 (probabilmente attribuibile alla pandemia). Si riscontra una simile variazione nel valore delle azioni di Spotify in corrispondenza dello stesso periodo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2) Impatto della pirateria sull'utenza di Spotify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Si è riscontrata correlazione di tipo non lineare e inversa tra i download trimestrali dell'apk e il numero di utenti mensili.\n",
+    "* Non è stata riscontrata né correlazione, nè Granger causality tra i download trimestrali dell'apk e gli utenti Premium marginali.\n",
+    "* È stata invece rilevata, sebbene con valori non elevati, una correlazione non lineare e inversa tra i download trimestrali dell'apk e gli utenti Ad marginali.\n",
+    "    * Questo suggerisce che variazioni dei download dell'apk non comportino particolari cambiamenti nella crescita utenza premium, e che coloro che scaricano l'apk sarebbero potenzialmente utenti ad (comunque non paganti)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bibliografia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Dataset\n",
+    "2) documentazione statsmodels\n",
+    "3) Documentazione ruptures\n",
+    "4) Yahoo finance"
    ]
   }
  ],
