--- a/src/final2.ipynb
+++ b/src/final2.ipynb
@@ -11,20 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il seguente studio è stato svolto per interesse personale riguardo all'industria musicale. I dati a riguardo sono apparentemente riservati (a meno di previo pagamento), l'unica azienda di cui siamo riusciti a trovare i dati pubblicati liberamente è Spotify, che per quanto di dimensione limitata ci permettono di fare analisi sui loro guadagni e utenza mensile. Per curiosità personale abbiamo anche cercato dati riguardanti l'uso dell'applicazione pirata di Spotify, che permette di avere gratuitamente le funzioni da utente premium, per osservare come questa applicazione influenza utenti e guadagni dell'azienda.\n",
+    "Il seguente studio vuole analizzare alcuni aspetti dell'industria musicale degli ultimi anni, in cui si è progressivamente affermato il dominio delle piattaforme di streaming sulle altre modalità di fruizione. Tale cambio di paradigma comporta l'adozione di un modello di business diverso da quello tradizionale, in cui gli utenti possono avere un accesso ai prodotti musicali anche non previo pagamento, attraverso la presenza di inserzioni pubblicitarie, oppure pagare un abbonamento mensile che permette l'accesso a servizi aggiuntivi e assenza di interruzioni pubblicitarie.\n",
+    "\n",
+    "Verranno pertanto studiati i dati finanziari e di utenza di Spotify, una delle principali piattaforme di streaming. Tali dati sono in parte resi disponibili gratuitamente dalla società stessa, altri solo a pagamento e ripubblicati da altre fonti.\n",
+    "\n",
+    "Si vuole inoltre indagare se e in che modo la pirateria informatica possa avere effetti sulla piattaforma. A tale scopo, si è fatto riferimento ai download della più diffusa apk di Spotify, ossia una versione illecita dell'app che permette di usufruire di gran parte dei servizi altrimenti a pagamento.\n",
     "\n",
     "## Domande di ricerca \n",
     "1) Da cosa vengono influenzati i guadagni di Spotify?\n",
     "2) Quanto e in che modo l'uso della pirateria influenza i guadagni e l'utenza mensile?\n",
     "\n",
     "### Terminologia\n",
-    "I dati vengono presentati dall'azienda utilizzando termini specifici:\n",
+    "Nel corso della trattazione, utilizzeremo alcuni termini utilizzati nei dati forniti da Spotify. Si riporta di seguito una loro breve definizione.\n",
     "\n",
-    "* MAUs significa Monthly Active Users, indica l'utenza mensile (sia totale sia delle due categorie di utenza).\n",
-    "* Premium indica gli utenti abbonati al servizio e ciò a loro legato.\n",
-    "* Ad indica l'altro bacino di utenza, coloro che utlizzano il servizio gratuitamente con il supporto pubblicitario.\n",
-    "\n",
-    "Nel corso dello studio utilizzeremo questa terminologia come presentata."
+    "* **MAUs**: Monthly Active Users, indica l'utenza mensile (sia totale, che disaggregata in utenza pagante e non pagante).\n",
+    "* **Premium**: utenti paganti, abbonati al servizio e ciò a loro legato.\n",
+    "* **Ad** utenti non paganti, a cui sono imposte le interruzioni pubblicitarie e un minor numero di funzionalità."
    ]
   },
   {
@@ -77,10 +79,10 @@
    "metadata": {},
    "source": [
     "## Dati finanziari Spotify\n",
-    "È stato utilizzato un dataset creato a partire dai dati pubblicati da Spotify al link https://investors.spotify.com/financials/default.aspx, integrandoli con dati non pubblicati direttamente dall'azienda, ma presenti su un dataset di Kaggle (// TODO link kaggle).\n",
+    "È stato utilizzato un dataset creato a partire dai dati pubblicati da [Spotify Financials](https://investors.spotify.com/financials/default.aspx), integrandoli con dati non pubblicati direttamente dall'azienda, ma presenti su un [dataset di Kaggle](https://www.kaggle.com/datasets/mauryansshivam/spotify-revenue-expenses-and-its-premium-users?resource=download).\n",
     "\n",
     "## Download dell'apk\n",
-    "Per studiare il numero di download dell'apk si è fatto riferimento ai dati pubblicati da uno dei principali siti di download di software per Android https://www.apk4fun.com/history/9887/"
+    "Per studiare il numero di download dell'apk si è fatto riferimento ai dati pubblicati da uno dei principali [siti di download](https://www.apk4fun.com/history/9887/) di software per Android."
    ]
   },
   {
@@ -326,7 +328,7 @@
    "source": [
     "In termini matematici, il calcolo dei changepoint in ruptures si basa su un modello statistico che cerca di suddividere una serie temporale $X = \\{x_1, x_2, ..., x_n\\}$ in segmenti omogenei tra loro. Ogni segmento è caratterizzato da una distribuzione statistica diversa o da un insieme di parametri.\n",
     "\n",
-    "L'obiettivo è trovare il numero ottimale di segmenti e i punti in cui avviene il cambiamento. Questo può essere formulato come un problema di ottimizzazione che cerca di minimizzare una funzione di costo. "
+    "L'obiettivo è trovare il numero ottimale di segmenti e i punti in cui avviene il cambiamento. Questo può essere formulato come un problema di ottimizzazione che cerca di minimizzare una funzione di costo. L'algoritmo di seugito utilizzato, presente nella libreria Ruptures, è descritto in [Killick2012]; si riporta qui una breve descrizione del suo funzionamento."
    ]
   },
   {
@@ -1103,6 +1105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![Fonte: Yahoo Finance](spotify-stocks.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2) Impatto della pirateria sull'utenza di Spotify"
    ]
   },
@@ -1127,10 +1136,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Dataset\n",
-    "2) documentazione statsmodels\n",
-    "3) Documentazione ruptures\n",
-    "4) Yahoo finance"
+    "* **Spotify Financials**: https://investors.spotify.com/financials/default.aspx\n",
+    "* **Dataset Kaggle per dati di Spotify**: https://www.kaggle.com/datasets/mauryansshivam/spotify-revenue-expenses-and-its-premium-users?resource=download\n",
+    "* **Download apk**: https://www.apk4fun.com/history/9887/\n",
+    "* **Documentazione statsmodels per time series analysis**: https://www.statsmodels.org/stable/tsa.html\n",
+    "* **Documentazione ruptures per il metodo PELT**: https://centre-borelli.github.io/ruptures-docs/user-guide/detection/pelt/\n",
+    "* [Killick2012] Killick, R., Fearnhead, P., & Eckley, I. (2012). Optimal detection of changepoints with a linear computational cost. Journal of the American Statistical Association, 107(500), 1590–1598.\n",
+    "* **Yahoo finance**: https://finance.yahoo.com/quote/SPOT/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8&guce_referrer_sig=AQAAAAhaqIL5wG090WCkiv8qYEye6Sd_PTnNkBcB_uEIYijOnElc1uq-WprN0Ip7hW4zCicA8ejKUahZi2yu7iakh6sezKt9rI4GCJA7i3NO7cOqeduISiY31_fTmh1SDeZAU4GwULrofD0w8Khsuaa6G4y6pRsGzFc147cVQAfhWUc4"
    ]
   }
  ],
